--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
         <div class="side-panel__devider"></div>
         <div class="side-panel__text"> <span>Социальные сети</span></div>
     </aside>
-    <div class="menu active">
+    <div class="menu">
         <div class="menu__block">
             <div class="menu__close">
                 <svg width="29" height="30" viewBox="0 0 29 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -116,6 +116,25 @@
             <div class="promo__buttons">
                 <a href="#" class="promo__link btn">Портфолио</a>
                 <a href="#" class="promo__link">Про меня</a>
+            </div>
+        </div>
+    </section>
+    <section class="about">
+        <div class="container">
+            <div class="about__wrapper">
+                <div class="about__img">
+                    <img src="img/photo.jpg" alt="i">
+                </div>
+                <div class="about__descr">
+                    <div class="title title_fz16 about__subtitle">Про меня</div>
+                    <div class="title">Меня зовут Алексей</div>
+                    <div class="about__devider"></div>
+                    <div class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                    </div>
+                </div>
+                <div class="about__skills">
+                    sdfsdfsd
+                </div>
             </div>
         </div>
     </section>
