add sectioan about_me

--- a/src/index.html
+++ b/src/index.html
@@ -126,14 +126,40 @@
                     <img src="img/photo.jpg" alt="i">
                 </div>
                 <div class="about__descr">
-                    <div class="title title_fz16 about__subtitle">Про меня</div>
-                    <div class="title">Меня зовут Алексей</div>
-                    <div class="about__devider"></div>
-                    <div class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-                    </div>
+                    <h2 class="title title_fz16 about__subtitle">Про меня</h2>
+                    <div class="title">Меня зовут Алексей </div>
+                    <div class="about__devider devider"></div>
+                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                    </p>
                 </div>
                 <div class="about__skills">
-                    sdfsdfsd
+                    <div class="about__skills-item">
+                        <div class="about__skills-circle">
+                            <img class="about__skills-icon" src="icons/about_me/web_development.svg" alt="web">
+                        </div>
+                        <div class="about__skills-descr">
+                            <div class="title title_fz14 about__skills-title">Web-разработка </div>
+                            <p class="about__skills-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        </div>
+                    </div>
+                    <div class="about__skills-item">
+                        <div class="about__skills-circle">
+                            <img class="about__skills-icon" src="icons/about_me/mobile_dev.svg" alt="web">
+                        </div>
+                        <div class="about__skills-descr">
+                            <div class="title title_fz14 about__skills-title">Разработка приложений</div>
+                            <p class="about__skills-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                    <div class="about__skills-item">
+                        <div class="about__skills-circle">
+                            <img class="about__skills-icon" src="icons/about_me/design.svg" alt="web">
+                        </div>
+                        <div class="about__skills-descr">
+                            <div class="title title_fz14 about__skills-title">UI/UX Design</div>
+                            <p class="about__skills-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
