add section usefull

--- a/src/index.html
+++ b/src/index.html
@@ -164,6 +164,139 @@
             </div>
         </div>
     </section>
+    <section class="usefull">
+        <div class="container">
+            <div class="usefull__subtitle title title_fz16">Опыт</div>
+            <h2 class="usefull__title title">Чем я буду полезен</h2>
+            <div class="usefull__divider devider"></div>
+            <div class="usefull__grid-container">
+                <div class="usefull__column column-useful">
+                    <h3 class= "title title_fz20 column-useful__title">Образование</h3>
+                    <ul>
+                        <li>
+                            <div class="column-useful__item">
+                                <div class="column-useful__item-head">
+                                    <div class="column-useful__item-circle">
+                                        <img src="icons/experience/university.svg" alt="university">
+                                    </div>
+                                    <h4 class="title title_fz14">МГТУ им. Н. Э. Баумана</h4>
+                                    <div class="column-useful__item-location">Диплом магистра | Москва (2014-2020)</div>
+                                </div>
+                                <div class="column-useful__item-text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="column-useful__item">
+                                <div class="column-useful__item-head">
+                                    <div class="column-useful__item-circle">
+                                        <img src="icons/experience/courses.svg" alt="udemy">
+                                    </div>
+                                    <h4 class="title title_fz14">Udemy</h4>
+                                    <div class="column-useful__item-location">Курсы по <strong>Web</strong>-разработке </div>
+                                </div>
+                                <div class="column-useful__item-text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="usefull__column column-useful">
+                    <h3 class= "title title_fz20 column-useful__title">Опыт работы</h3>
+                    <ul>
+                        <li>
+                            <div class="column-useful__item">
+                                <div class="column-useful__item-head">
+                                    <div class="column-useful__item-circle">
+                                        <img src="icons/experience/developer.svg" alt="web-dev">
+                                    </div>
+                                    <h4 class="title title_fz14">Front-End Developer</h4>
+                                    <div class="column-useful__item-location"> <strong>EPAM</strong> | Москва (2018-2019)</div>
+                                </div>
+                                <div class="column-useful__item-text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="column-useful__item">
+                                <div class="column-useful__item-head">
+                                    <div class="column-useful__item-circle">
+                                        <img src="icons/experience/designer.svg" alt="UI">
+                                    </div>
+                                    <h4 class="title title_fz14">UI/UX Designer</h4>
+                                    <div class="column-useful__item-location">Squad Team | Москва (2018)</div>
+                                </div>
+                                <div class="column-useful__item-text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="stack">
+        <div class="container">
+            <div class="title title_fz16 stack__title">Навыки</div>
+            <h2 class="title stack__subtitle">Что я использую в работе</h2>
+            <div class="devider"></div>
+            <div class="stack__grid-container">
+                <div class="stack__grid-item item-grid">
+                    <div class="item-grid__img">
+                        <img src="icons/skills/html5.svg" alt="HTML">
+                    </div>
+                    <div class="title title_fz14 item-grid__title">HTML5</div>
+                    <div class="item-grid__descr">Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более SEO-оптимизированную структуру вашего продукта</div>
+                </div>
+                <div class="stack__grid-item item-grid">
+                    <div class="item-grid__img">
+                        <img src="icons/skills/css3.svg" alt="CSS">
+                    </div>
+                    <div class="title title_fz14 item-grid__title">CSS3</div>
+                    <div class="item-grid__descr">Этот язык стилей позволяет мне создавать абсолютно любой внешний вид вашего сайта или приложения. Все ограничивается только вашей фантазией!</div>
+                </div>
+                <div class="stack__grid-item item-grid">
+                    <div class="item-grid__img">
+                        <img src="icons/skills/js.svg" alt="JS">
+                    </div>
+                    <div class="title title_fz14 item-grid__title">Java Script</div>
+                    <div class="item-grid__descr">Этот язык программирования позволяет оживить все что угодно: слайдеры, окна, подсказки, вкладки, получение данных от сервера и многое другое</div>
+                </div>
+                <div class="stack__grid-item item-grid">
+                    <div class="item-grid__img">
+                        <img src="icons/skills/jquery.svg" alt="jQ">
+                    </div>
+                    <div class="title title_fz14 item-grid__title">Jquery</div>
+                    <div class="item-grid__descr">Библиотека Jquery позволит ускорить разработку. Без необходимости интегрировать в проект мы её не будем, но навык работы с ней присутствует</div>
+                </div>
+                <div class="stack__grid-item item-grid">
+                    <div class="item-grid__img">
+                        <img src="icons/skills/react.svg" alt="React">
+                    </div>
+                    <div class="title title_fz14 item-grid__title">React</div>
+                    <div class="item-grid__descr">Эта библиотека позволяет создавать web-приложения. Мы можем создать максимально интерактивный продукт именно под ваши цели</div>
+                </div>
+                <div class="stack__grid-item item-grid">
+                    <div class="item-grid__img">
+                        <img src="icons/skills/node.js.svg" alt="Node">
+                    </div>
+                    <div class="title title_fz14 item-grid__title">Node.js</div>
+                    <div class="item-grid__descr">Эта платформа позволяет создавать бэкенд для вашего продукта - “мозги”, которые будут выполнять действия, которые пользователь не видит</div>
+                </div>
+                <div class="stack__grid-item item-grid">
+                    <div class="item-grid__img">
+                        <img src="icons/skills/mongo.db.svg" alt="mongoDB">
+                    </div>
+                    <div class="title title_fz14 item-grid__title">Mongo.db</div>
+                    <div class="item-grid__descr">Это нереляционная база данных, которая будет хранить данные вашего сайта или приложения</div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
