add section stack without js

--- a/src/index.html
+++ b/src/index.html
@@ -295,6 +295,63 @@
                     <div class="item-grid__descr">Это нереляционная база данных, которая будет хранить данные вашего сайта или приложения</div>
                 </div>
             </div>
+            <div class="stack__grid-container-lines">
+                <div class="stack__grid-lines-item item-lines-grid">
+                    <div class="item-lines-grid__head">
+                        <div class="title title_fz14 item-lines-grid__title">Создание сайтов
+                        </div>
+                        <div class="title title_fz14 item-lines-grid__number">100%</div>
+                        <div class="item-lines-grid__line">
+                            <div class="item-lines-grid__inner-line" style="width: 100%"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="stack__grid-lines-item item-lines-grid">
+                    <div class="item-lines-grid__head">
+                        <div class="title title_fz14 item-lines-grid__title">Создание приложений</div>
+                        <div class="title title_fz14 item-lines-grid__number">85%</div>
+                        <div class="item-lines-grid__line">
+                            <div class="item-lines-grid__inner-line" style="width: 85%"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="stack__grid-lines-item item-lines-grid">
+                    <div class="item-lines-grid__head">
+                        <div class="title title_fz14 item-lines-grid__title">Работа с данными</div>
+                        <div class="title title_fz14 item-lines-grid__number">90%</div>
+                        <div class="item-lines-grid__line">
+                            <div class="item-lines-grid__inner-line" style="width: 90%"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="stack__grid-lines-item item-lines-grid">
+                    <div class="item-lines-grid__head">
+                        <div class="title title_fz14 item-lines-grid__title">Креативность</div>
+                        <div class="title title_fz14 item-lines-grid__number">75%</div>
+                        <div class="item-lines-grid__line">
+                            <div class="item-lines-grid__inner-line" style="width: 75%"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="stack__grid-lines-item item-lines-grid">
+                    <div class="item-lines-grid__head">
+                        <div class="title title_fz14 item-lines-grid__title">Создание дизайна</div>
+                        <div class="title title_fz14 item-lines-grid__number">90%</div>
+                        <div class="item-lines-grid__line">
+                            <div class="item-lines-grid__inner-line" style="width: 90%"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="stack__grid-lines-item item-lines-grid">
+                    <div class="item-lines-grid__head">
+                        <div class="title title_fz14 item-lines-grid__title">Soft skills</div>
+                        <div class="title title_fz14 item-lines-grid__number">95%</div>
+                        <div class="item-lines-grid__line">
+                            <div class="item-lines-grid__inner-line" style="width: 95%"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <script src="js/script.js"></script>
