add section portfolio and start section price

--- a/src/index.html
+++ b/src/index.html
@@ -297,59 +297,88 @@
             </div>
             <div class="stack__grid-container-lines">
                 <div class="stack__grid-lines-item item-lines-grid">
-                    <div class="item-lines-grid__head">
+                    <div class="item-lines-grid__body">
                         <div class="title title_fz14 item-lines-grid__title">Создание сайтов
                         </div>
                         <div class="title title_fz14 item-lines-grid__number">100%</div>
                         <div class="item-lines-grid__line">
-                            <div class="item-lines-grid__inner-line" style="width: 100%"></div>
+                            <div class="item-lines-grid__inner-line"></div>
                         </div>
                     </div>
                 </div>
                 <div class="stack__grid-lines-item item-lines-grid">
-                    <div class="item-lines-grid__head">
+                    <div class="item-lines-grid__body">
                         <div class="title title_fz14 item-lines-grid__title">Создание приложений</div>
                         <div class="title title_fz14 item-lines-grid__number">85%</div>
                         <div class="item-lines-grid__line">
-                            <div class="item-lines-grid__inner-line" style="width: 85%"></div>
+                            <div class="item-lines-grid__inner-line"></div>
                         </div>
                     </div>
                 </div>
                 <div class="stack__grid-lines-item item-lines-grid">
-                    <div class="item-lines-grid__head">
+                    <div class="item-lines-grid__body">
                         <div class="title title_fz14 item-lines-grid__title">Работа с данными</div>
                         <div class="title title_fz14 item-lines-grid__number">90%</div>
                         <div class="item-lines-grid__line">
-                            <div class="item-lines-grid__inner-line" style="width: 90%"></div>
+                            <div class="item-lines-grid__inner-line"></div>
                         </div>
                     </div>
                 </div>
                 <div class="stack__grid-lines-item item-lines-grid">
-                    <div class="item-lines-grid__head">
+                    <div class="item-lines-grid__body">
                         <div class="title title_fz14 item-lines-grid__title">Креативность</div>
                         <div class="title title_fz14 item-lines-grid__number">75%</div>
                         <div class="item-lines-grid__line">
-                            <div class="item-lines-grid__inner-line" style="width: 75%"></div>
+                            <div class="item-lines-grid__inner-line"></div>
                         </div>
                     </div>
                 </div>
                 <div class="stack__grid-lines-item item-lines-grid">
-                    <div class="item-lines-grid__head">
+                    <div class="item-lines-grid__body">
                         <div class="title title_fz14 item-lines-grid__title">Создание дизайна</div>
                         <div class="title title_fz14 item-lines-grid__number">90%</div>
                         <div class="item-lines-grid__line">
-                            <div class="item-lines-grid__inner-line" style="width: 90%"></div>
+                            <div class="item-lines-grid__inner-line"></div>
                         </div>
                     </div>
                 </div>
                 <div class="stack__grid-lines-item item-lines-grid">
-                    <div class="item-lines-grid__head">
+                    <div class="item-lines-grid__body">
                         <div class="title title_fz14 item-lines-grid__title">Soft skills</div>
                         <div class="title title_fz14 item-lines-grid__number">95%</div>
                         <div class="item-lines-grid__line">
-                            <div class="item-lines-grid__inner-line" style="width: 95%"></div>
+                            <div class="item-lines-grid__inner-line"></div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="portfolio">
+        <div class="container">
+            <div class="title title_fz16 portfolio__title">Портфолио</div>
+            <h2 class="title portfolio__subtitle">Мои работы</h2>
+            <div class="devider"></div>
+            <div class="portfolio__grid-container">
+                <a href="#" class="portfolio__item"><img src="img/works/uber.jpg" alt="uber"></a>
+                <a href="#" class="portfolio__item"><img src="img/works/pulse.jpg" alt="pulse"></a>
+                <a href="#" class="portfolio__item"><img src="img/works/bread.jpg" alt="Bread"></a>
+                <a href="#" class="portfolio__item vertical"><img src="img/works/plans.jpg" alt="plans"></a>
+                <a href="#" class="portfolio__item"><img src="img/works/ipad.jpg" alt="iPad"></a>
+                <a href="#" class="portfolio__item horizontal"><img src="img/works/mac.jpg" alt="Macboock"></a>
+            </div>
+        </div>
+    </section>
+    <section class="price">
+        <div class="container">
+            <div class="title title_fz16 price__title">Навыки</div>
+            <h2 class="title price__subtitle">Что я использую в работе</h2>
+            <div class="devider"></div>
+            <div class="price__wrapper">
+                <div class="price__item">
+                    <div class="price__item-title">Landing-page</div>
+                    <div class="price__price">от 8000 руб.</div>
+                    <div class="price__descr">Одностраничный сайт для презентации услуг/товаров/...</div>
                 </div>
             </div>
         </div>
