--- a/src/index.html
+++ b/src/index.html
@@ -376,9 +376,36 @@
             <div class="devider"></div>
             <div class="price__wrapper">
                 <div class="price__item">
-                    <div class="price__item-title">Landing-page</div>
-                    <div class="price__price">от 8000 руб.</div>
+                    <div class="title title_fz14 price__item-title">Landing-page</div>
+                    <div class="title title_fz14 price__price">от 8000 руб.</div>
                     <div class="price__descr">Одностраничный сайт для презентации услуг/товаров/...</div>
+                </div>
+                <div class="price__item">
+                    <div class="title title_fz14 price__item-title">Web-приложение
+                    </div>
+                    <div class="title title_fz14 price__price">от 28000 руб.</div>
+                    <div class="price__descr">Приложение внутри браузера для лучшего комфорта
+                    </div>
+                </div>
+                <div class="price__item">
+                    <div class="title title_fz14 price__item-title">Корпоративный сайт</div>
+                    <div class="title title_fz14 price__price">от 20000 руб.</div>
+                    <div class="price__descr">Сайт для вашего бизнеса или компании</div>
+                </div>
+                <div class="price__item">
+                    <div class="title title_fz14 price__item-title">Android/IOS Приложение</div>
+                    <div class="title title_fz14 price__price">от 25000 руб.</div>
+                    <div class="price__descr">Приложение для смартфона любой ОС</div>
+                </div>
+                <div class="price__item">
+                    <div class="title title_fz14 price__item-title">Интернет-магазин</div>
+                    <div class="title title_fz14 price__price">от 30000 руб.</div>
+                    <div class="price__descr">Инструмент для ваших продаж в сети</div>
+                </div>
+                <div class="price__item">
+                    <div class="title title_fz14 price__item-title">Дизайн</div>
+                    <div class="title title_fz14 price__price">Индивидуально</div>
+                    <div class="price__descr">Создам дизайн для вашего сайта/приложения...</div>
                 </div>
             </div>
         </div>
