remake section price

--- a/src/index.html
+++ b/src/index.html
@@ -371,12 +371,11 @@
     </section>
     <section class="price">
         <div class="container">
-            <div class="title title_fz16 price__title">Навыки</div>
-            <h2 class="title price__subtitle">Что я использую в работе</h2>
+            <div class="title title_fz16 price__title">Прайс-лист</div>
             <div class="devider"></div>
             <div class="price__wrapper">
                 <div class="price__item">
-                    <div class="title title_fz14 price__item-title">Landing-page</div>
+                    <div class="title title_fz14 price__item-title">Landing-page </div>
                     <div class="title title_fz14 price__price">от 8000 руб.</div>
                     <div class="price__descr">Одностраничный сайт для презентации услуг/товаров/...</div>
                 </div>
