--- a/src/index.html
+++ b/src/index.html
@@ -376,35 +376,73 @@
             <div class="price__wrapper">
                 <div class="price__item">
                     <div class="title title_fz14 price__item-title">Landing-page </div>
-                    <div class="title title_fz14 price__price">от 8000 руб.</div>
+                    <div class="title title_fz14 price__count">от 8000 руб.</div>
                     <div class="price__descr">Одностраничный сайт для презентации услуг/товаров/...</div>
                 </div>
                 <div class="price__item">
                     <div class="title title_fz14 price__item-title">Web-приложение
                     </div>
-                    <div class="title title_fz14 price__price">от 28000 руб.</div>
+                    <div class="title title_fz14 price__count">от 28000 руб.</div>
                     <div class="price__descr">Приложение внутри браузера для лучшего комфорта
                     </div>
                 </div>
                 <div class="price__item">
                     <div class="title title_fz14 price__item-title">Корпоративный сайт</div>
-                    <div class="title title_fz14 price__price">от 20000 руб.</div>
+                    <div class="title title_fz14 price__count">от 20000 руб.</div>
                     <div class="price__descr">Сайт для вашего бизнеса или компании</div>
                 </div>
                 <div class="price__item">
                     <div class="title title_fz14 price__item-title">Android/IOS Приложение</div>
-                    <div class="title title_fz14 price__price">от 25000 руб.</div>
+                    <div class="title title_fz14 price__count">от 25000 руб.</div>
                     <div class="price__descr">Приложение для смартфона любой ОС</div>
                 </div>
                 <div class="price__item">
                     <div class="title title_fz14 price__item-title">Интернет-магазин</div>
-                    <div class="title title_fz14 price__price">от 30000 руб.</div>
+                    <div class="title title_fz14 price__count">от 30000 руб.</div>
                     <div class="price__descr">Инструмент для ваших продаж в сети</div>
                 </div>
                 <div class="price__item">
                     <div class="title title_fz14 price__item-title">Дизайн</div>
-                    <div class="title title_fz14 price__price">Индивидуально</div>
+                    <div class="title title_fz14 price__count">Индивидуально</div>
                     <div class="price__descr">Создам дизайн для вашего сайта/приложения...</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="contacts">
+        <div class="container">
+            <div class="contacts__wrapper">
+                <div class="contacts__img">
+                    <img src="img/photo.jpg" alt="i">
+                </div>
+                <div class="contacts__descr">
+                    <h2 class="title title_fz16 contacts__subtitle">Контакты</h2>
+                    <div class="title">Свяжитесь со мной</div>
+                    <div class="contacts__devider devider"></div>
+                    <div class="title title_fz14 contacts__text">Любым удобным для вас способом:</div>
+                    <div class="contacts__social">
+                        <a href="#" class="contacts__link"><img src="icons/Facebook.svg" alt="facebook"></a>
+                        <a href="#" class="contacts__link"><img src="icons/Telegram.svg" alt="telegram"></a>
+                        <a href="#" class="contacts__link"><img src="icons/Instagram.svg" alt="instagram"></a>
+                    </div>
+                    <div class="title title_fz14 contacts__text">Или оставьте ваши данные и я сам вам напишу:</div>
+                    <form class="contacts__form">
+                        <div class="contacts__input">
+                            <input type="text" id="name" name="name">
+                            <label for="name">Ваше имя</label>
+                        </div>
+                        <div class="contacts__input">
+                            <input type="email" id="email" name="email">
+                            <label for="email">Ваша почта</label>
+                        </div>
+                        <div class="contacts__textarea">
+                            <textarea name="text" id="text" cols="20" rows="2"></textarea>
+                            <label for="text">Ваше сообщение</label>
+                        </div>
+                        <div>                        
+                            <button class="btn title title_fz14">Отправить собщение</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
