add adaptive for section stack and usefull

--- a/src/index.html
+++ b/src/index.html
@@ -164,7 +164,7 @@
             </div>
         </div>
     </section>
-    <!-- <section class="usefull">
+    <section class="usefull">
         <div class="container">
             <div class="usefull__subtitle title title_fz16">Опыт</div>
             <h2 class="usefull__title title">Чем я буду полезен</h2>
@@ -172,7 +172,7 @@
             <div class="usefull__grid-container">
                 <div class="usefull__column column-useful">
                     <h3 class= "title title_fz20 column-useful__title">Образование</h3>
-                    <ul>
+                    <ul class="small-top">
                         <li>
                             <div class="column-useful__item">
                                 <div class="column-useful__item-head">
@@ -188,7 +188,7 @@
                             </div>
                         </li>
                         <li>
-                            <div class="column-useful__item">
+                            <div class="column-useful__item npt column-useful__item_top28">
                                 <div class="column-useful__item-head">
                                     <div class="column-useful__item-circle">
                                         <img src="icons/experience/courses.svg" alt="udemy">
@@ -205,7 +205,7 @@
                 </div>
                 <div class="usefull__column column-useful">
                     <h3 class= "title title_fz20 column-useful__title">Опыт работы</h3>
-                    <ul>
+                    <ul class="small-top"> 
                         <li>
                             <div class="column-useful__item">
                                 <div class="column-useful__item-head">
@@ -221,7 +221,7 @@
                             </div>
                         </li>
                         <li>
-                            <div class="column-useful__item">
+                            <div class="column-useful__item npt column-useful__item_top28">
                                 <div class="column-useful__item-head">
                                     <div class="column-useful__item-circle">
                                         <img src="icons/experience/designer.svg" alt="UI">
@@ -243,7 +243,7 @@
         <div class="container">
             <div class="title title_fz16 stack__title">Навыки</div>
             <h2 class="title stack__subtitle">Что я использую в работе</h2>
-            <div class="devider"></div>
+            <div class="stack__devider devider"></div>
             <div class="stack__grid-container">
                 <div class="stack__grid-item item-grid">
                     <div class="item-grid__img">
@@ -354,7 +354,7 @@
             </div>
         </div>
     </section>
-    <section class="portfolio">
+    <!-- <section class="portfolio">
         <div class="container">
             <div class="title title_fz16 portfolio__title">Портфолио</div>
             <h2 class="title portfolio__subtitle">Мои работы</h2>
@@ -368,8 +368,8 @@
                 <a href="#" class="portfolio__item horizontal"><img src="img/works/mac.jpg" alt="Macboock"></a>
             </div>
         </div>
-    </section>
-    <section class="price">
+    </section> -->
+    <!-- <section class="price">
         <div class="container">
             <div class="title title_fz16 price__title">Прайс-лист</div>
             <div class="devider"></div>
@@ -408,8 +408,8 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section class="contacts">
+    </section> -->
+    <!-- <section class="contacts">
         <div class="container">
             <div class="contacts__wrapper">
                 <div class="contacts__img">
