--- a/src/index.html
+++ b/src/index.html
@@ -354,11 +354,11 @@
             </div>
         </div>
     </section>
-    <!-- <section class="portfolio">
+    <section class="portfolio">
         <div class="container">
             <div class="title title_fz16 portfolio__title">Портфолио</div>
             <h2 class="title portfolio__subtitle">Мои работы</h2>
-            <div class="devider"></div>
+            <div class="portfolio__devider devider"></div>
             <div class="portfolio__grid-container">
                 <a href="#" class="portfolio__item"><img src="img/works/uber.jpg" alt="uber"></a>
                 <a href="#" class="portfolio__item"><img src="img/works/pulse.jpg" alt="pulse"></a>
@@ -368,8 +368,8 @@
                 <a href="#" class="portfolio__item horizontal"><img src="img/works/mac.jpg" alt="Macboock"></a>
             </div>
         </div>
-    </section> -->
-    <!-- <section class="price">
+    </section>
+    <section class="price">
         <div class="container">
             <div class="title title_fz16 price__title">Прайс-лист</div>
             <div class="devider"></div>
@@ -408,7 +408,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- <section class="contacts">
         <div class="container">
             <div class="contacts__wrapper">
