--- a/src/index.html
+++ b/src/index.html
@@ -409,7 +409,7 @@
             </div>
         </div>
     </section>
-    <!-- <section class="contacts">
+    <section class="contacts">
         <div class="container">
             <div class="contacts__wrapper">
                 <div class="contacts__img">
@@ -436,11 +436,11 @@
                             <label for="email">Ваша почта</label>
                         </div>
                         <div class="contacts__textarea">
-                            <textarea name="text" id="text" cols="20" rows="2"></textarea>
+                            <textarea name="text" id="text"></textarea>
                             <label for="text">Ваше сообщение</label>
                         </div>
                         <div class="contacts__triggers">                        
-                            <button class="btn title title_fz14">Отправить собщение</button>
+                            <button class="contacts__btn btn title title_fz14">Отправить собщение</button>
                             <div class="contacts__policy">
                                 <input required type="checkbox">
                                 <span>Я согласен(а) с <a href="policy.html">политикой конфиденциальности</a></span>
@@ -450,7 +450,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
